Modified the Makefile so that it builds dllPath.bat.  Added start_IOC.bat, a script to start the IOC on Windows.

--- a/iocs/automation1IOC/iocBoot/iocAutomation1/Makefile
+++ b/iocs/automation1IOC/iocBoot/iocAutomation1/Makefile
@@ -1,5 +1,8 @@
 TOP = ../..
 include $(TOP)/configure/CONFIG
 ARCH = $(EPICS_HOST_ARCH)
-TARGETS = envPaths
+# Linux only needs envPaths
+#TARGETS = envPaths
+# Windows needs envPaths and dllPath.bat
+TARGETS = envPaths dllPath.bat
 include $(TOP)/configure/RULES.ioc
